--- a/src/main/resources/templates/back-end/backend_course.html
+++ b/src/main/resources/templates/back-end/backend_course.html
@@ -37,7 +37,7 @@
 
         <div class="content">
             <h1>買賣課程管理</h1>
-            <div class="content-row">
+            <!-- <div class="content-row">
                 <input type="text" class="search" placeholder="關鍵字搜尋">
                 <button class="search-action">搜尋</button>
                 <select name="" id="" value="" class="filter-state">
@@ -47,7 +47,7 @@
                     <option value="off">已下架</option>
                     <option value="off">未上架</option>
                 </select>
-            </div>
+            </div> -->
             <table id="coursemanaage" class="backstage_table" >
             	<thead>
 	                <tr>
