--- a/src/main/resources/templates/front-end/course/create_course_video.html
+++ b/src/main/resources/templates/front-end/course/create_course_video.html
@@ -977,9 +977,10 @@
     	let myInput;
     	myInput = document.createElement('input');
     	form.appendChild(myInput);
-    	myInput.setAttribute('type', 'text');
+    	myInput.setAttribute('type', 'hidden');
     	myInput.setAttribute('name', 'crId')
     	myInput.setAttribute('value', crId);
+    	
     	form.submit();
     });    	
                                 
