--- a/src/main/resources/templates/front-end/course/coach_course.html
+++ b/src/main/resources/templates/front-end/course/coach_course.html
@@ -729,7 +729,7 @@
                         <div class="rbt-tutor-information">
                             <div class="rbt-tutor-information-left">
                                 <div class="thumbnail rbt-avatars size-lg">
-                                    <img th:src="'data:image/jpeg;base64,' + ${uHeadshot}" alt="Instructor">
+                                    <img th:src="@{'/course/headshot/' + ${userVO.uId}}" alt="Instructor">
                                 </div>
                                 <div class="tutor-content">
                                     <h5 class="title" th:text="${uName}"></h5>
@@ -808,23 +808,24 @@
 													               controls th:src="@{/cdVideo}">
 													        </video> -->
                                                             <a href="course-details.html">
-                                                                <img th:src="'data:image/png;base64,' + ${course.base64Image}" alt="Card image">
+                                                                <img th:src="@{'/course/crCover/' + ${course.crId}}" alt="Card image">
+                                                                <!-- <img th:src="${course.crCover}" alt="Card image"> -->
                                                             </a>
                                                         </div>
                                                         <div class="rbt-card-body">
                                                             <div class="rbt-card-top">
                                                                 <div class="rbt-review">
-                                                                	<div class="rating">
+                                                                	<div class="rating" th:with="avgs = ${course.crTotStar / (course.crCmQuan*1.0)}" >
                                                                 	<!-- 平均星星數 -->
 																		<div>
 																		    <!-- 計算平均分數到小數點第一位 -->
-																		    <span th:with="avgs = ${course.crTotStar / (course.crCmQuan*1.0)}" th:text="${ #numbers.formatDecimal(avgs,1,'COMMA',1,'POINT')}" ></span>
+																		    <span th:text="${ #numbers.formatDecimal(avgs,1,'COMMA',1,'POINT')}" ></span>
 																		</div>
 	                                                                    <!-- 滿星的部分 -->
 	                                                                    <div th:if="${course.crTotStar div course.crCmQuan >= 1}">
-																		    <div th:each="star : ${#numbers.sequence(1, (course.crTotStar div course.crCmQuan))}">
-																		        <i class="fas fa-star"></i>
-																		    </div>
+																		    <i th:each="star : ${#numbers.sequence(1, (course.crTotStar div course.crCmQuan))}" class="fas fa-star">
+																		        <!-- <i class="fas fa-star"></i> -->
+																		    </i>
 																		</div>
 																		<!-- 半顆星星的顯示 -->
 																		<div th:if="${(#numbers.formatDecimal((course.crTotStar / (course.crCmQuan*1.0)) % 1, 1, 'DEFAULT', 1, 'POINT'))} >= 0.5">
@@ -832,7 +833,7 @@
 																		</div>
 																	    <!-- 不滿星的部分，灰色星星 -->
 																	    <!-- 判断小数部分是否大于等于0.5 -->
-																		<div th:if="${(#numbers.formatDecimal((course.crTotStar / (course.crCmQuan*1.0)) % 1, 1, 'DEFAULT', 1, 'POINT'))} >= 0.5">
+																		<div th:if="${(#numbers.formatDecimal((course.crTotStar / (course.crCmQuan*1.0)) % 1, 1, 'DEFAULT', 1, 'POINT'))} >= 0.5 AND ${avgs} < 4">
 																		    <!-- 如果有多余的半颗星，则生成对应数量的星星 -->
 																		    <div>
 																		        <i th:each="star : ${#numbers.sequence(course.crTotStar/course.crCmQuan + 2, 5)}"
@@ -843,7 +844,7 @@
 																		<!-- 如果没有多余的半颗星，则生成剩余数量的星星 -->
 																		<div th:if="${(#numbers.formatDecimal((course.crTotStar / (course.crCmQuan*1.0)) % 1, 1, 'DEFAULT', 1, 'POINT'))} < 0.5">
 																		    <div>
-																		        <i th:each="star : ${#numbers.sequence(course.crTotStar/course.crCmQuan + 1, 5)}"
+																		        <i th:each="star : ${#numbers.sequence(course.crTotStar/course.crCmQuan +1, 5)}"
 																		           class="fas fa-star"
 																		           style="color: grey; display: inline-block;"></i>
 																		    </div>
@@ -878,7 +879,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <script>
+                                        <!-- <script>
                                         document.addEventListener("DOMContentLoaded", function() {
                                             // 获取所有课程卡片元素
                                             var courseCards = document.querySelectorAll('.rbt-card.variation-01.rbt-hover1');
@@ -927,7 +928,7 @@
                                             document.body.appendChild(pagination);
                                         });
 
-                                        </script>
+                                        </script> -->
 										
                                         <div class="tab-pane fade" id="pending-4" role="tabpanel" aria-labelledby="pending-tab-4">
                                             <div class="row g-5">
@@ -937,7 +938,7 @@
                                                     <div class="rbt-card variation-01 rbt-hover">
                                                         <div class="rbt-card-img">
                                                             <a href="course-details.html">
-                                                                <img th:src="'data:image/png;base64,' + ${course.base64Image}" alt="Card image">
+                                                                <img th:src="@{'/course/crCover/' + ${course.crId}}" alt="Card image">
                                                             </a>
                                                         </div>
                                                         <div class="rbt-card-body">
@@ -970,7 +971,7 @@
                                                     <div class="rbt-card variation-01 rbt-hover">
                                                         <div class="rbt-card-img">
                                                             <a href="course-details.html">
-                                                                <img th:src="'data:image/png;base64,' + ${course.base64Image}" alt="Card image">
+                                                                <img th:src="@{'/course/crCover/' + ${course.crId}}" alt="Card image">
                                                             </a>
                                                         </div>
                                                         <div class="rbt-card-body">
@@ -1017,164 +1018,7 @@
         </div>
     </div>
     <!-- Start Footer aera -->
-    <footer class="rbt-footer footer-style-1 bg-color-white overflow-hidden">
-        <div class="footer-top">
-            <div class="container">
-                <div class="row g-5">
-                    <div class="col-lg-4 col-md-6 col-sm-6 col-12">
-                        <div class="footer-widget">
-                            <div class="logo">
-                                <a href="index.html">
-                                    <img src="assets/images/logo/logo.png" alt="Edu-cause">
-                                </a>
-                            </div>
-
-                            <p class="description mt--20">We’re always in search for talented
-                                and motivated people. Don’t be shy introduce yourself!
-                            </p>
-
-                            <ul class="social-icon social-default justify-content-start">
-                                <li><a href="https://www.facebook.com/">
-                                        <i class="feather-facebook"></i>
-                                    </a>
-                                </li>
-                                <li><a href="https://www.twitter.com">
-                                        <i class="feather-twitter"></i>
-                                    </a>
-                                </li>
-                                <li><a href="https://www.instagram.com/">
-                                        <i class="feather-instagram"></i>
-                                    </a>
-                                </li>
-                                <li><a href="https://www.linkdin.com/">
-                                        <i class="feather-linkedin"></i>
-                                    </a>
-                                </li>
-                            </ul>
-
-                            <div class="contact-btn mt--30">
-                                <a class="rbt-btn hover-icon-reverse btn-border-gradient radius-round" href="#">
-                                    <div class="icon-reverse-wrapper">
-                                        <span class="btn-text">Contact With Us</span>
-                                        <span class="btn-icon"><i class="feather-arrow-right"></i></span>
-                                        <span class="btn-icon"><i class="feather-arrow-right"></i></span>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-2 col-md-6 col-sm-6 col-12">
-                        <div class="footer-widget">
-                            <h5 class="ft-title">Useful Links</h5>
-                            <ul class="ft-link">
-                                <li>
-                                    <a href="12-marketplace.html">Marketplace</a>
-                                </li>
-                                <li>
-                                    <a href="04-kindergarten.html">kindergarten</a>
-                                </li>
-                                <li>
-                                    <a href="13-university-classic.html">University</a>
-                                </li>
-                                <li>
-                                    <a href="09-gym-coaching.html">GYM Coaching</a>
-                                </li>
-                                <li>
-                                    <a href="faqs.html">FAQ</a>
-                                </li>
-                                <li>
-                                    <a href="about-us-01.html">About Us</a>
-                                </li>
-                                <li>
-                                    <a href="privacy-policy.html">Privacy policy</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-2 col-md-6 col-sm-6 col-12">
-                        <div class="footer-widget">
-                            <h5 class="ft-title">Our Company</h5>
-                            <ul class="ft-link">
-                                <li>
-                                    <a href="contact.html">Contact Us</a>
-                                </li>
-                                <li>
-                                    <a href="become-a-teacher.html">Become Teacher</a>
-                                </li>
-                                <li>
-                                    <a href="blog.html">Blog</a>
-                                </li>
-                                <li>
-                                    <a href="instructor.html">Instructor</a>
-                                </li>
-                                <li>
-                                    <a href="event-list.html">Events</a>
-                                </li>
-                                <li>
-                                    <a href="course-filter-one-toggle.html">Course</a>
-                                </li>
-                                <li>
-                                    <a href="contact.html">Contact</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 col-sm-6 col-12">
-                        <div class="footer-widget">
-                            <h5 class="ft-title">Get Contact</h5>
-                            <ul class="ft-link">
-                                <li><span>Phone:</span> <a href="#">(406) 555-0120</a></li>
-                                <li><span>E-mail:</span> <a href="mailto:hr@example.com">admin@example.com</a></li>
-                            </ul>
-
-                            <form class="newsletter-form mt--20" action="#">
-                                <h6 class="w-600">Newsletter</h6>
-                                <p class="description">2000+ Our students are subscribe Around the World.<br> Don’t be shy introduce yourself!</p>
-
-                                <div class="form-group right-icon icon-email mb--20">
-                                    <label for="email">Enter Your Email Here</label>
-                                    <input id="email" type="email">
-                                </div>
-
-                                <div class="form-group mb--0">
-                                    <button class="rbt-btn rbt-switch-btn btn-gradient radius-round btn-sm" type="submit">
-                                        <span data-text="Submit Now">Submit Now</span>
-                                    </button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="rbt-separator-mid">
-            <div class="container">
-                <hr class="rbt-separator m-0">
-            </div>
-        </div>
-        <!-- Start Copyright Area  -->
-        <div class="copyright-area copyright-style-1 ptb--20">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-12">
-                        <p class="rbt-link-hover text-center text-lg-start">Copyright © 2023 <a href="https://themeforest.net/user/rbt-themes">Rainbow-Themes.</a> All Rights Reserved</p>
-                    </div>
-                    <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-12">
-                        <ul class="copyright-link rbt-link-hover justify-content-center justify-content-lg-end mt_sm--10 mt_md--10">
-                            <li><a href="#">Terms of service</a></li>
-                            <li><a href="privacy-policy.html">Privacy policy</a></li>
-                            <li><a href="subscription.html">Subscription</a></li>
-                            <li><a href="login.html">Login & Register</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- End Copyright Area  -->
-    </footer>
+    <div th:insert="front-end/footer.html"></div>
     <!-- End Footer aera -->
     <div class="rbt-progress-parent">
         <svg class="rbt-back-circle svg-inner" width="100%" height="100%" viewBox="-1 -1 102 102">
