--- a/src/main/resources/templates/back-end/backend_included_head.html
+++ b/src/main/resources/templates/back-end/backend_included_head.html
@@ -2,14 +2,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>fitanywhere後台</title>
   
-  <link rel="stylesheet" th:href="@{css/backend/reset.css}">
-  <link rel="stylesheet" th:href="@{css/backend/style.css}">
-  <link rel="stylesheet" th:href="@{css/backend/backstage_user.css}">
-  <link rel="stylesheet" th:href="@{css/backend/backstage_social.css}">
-  <link rel="stylesheet" th:href="@{css/backend/backstage_receive_opinion.css}">
-  <link rel="stylesheet" th:href="@{css/backend/backstage_news.css}">
-  <link rel="stylesheet" th:href="@{css/backend/backstage_manage_course.css}">
-  <link rel="stylesheet" th:href="@{css/backend/backstage_manage_course_order.css}">
-  <link rel="stylesheet" th:href="@{css/backend/backstage-ad.css}">
-  <link rel="stylesheet" th:href="@{css/backend/backstage_ad_list.css}">
+  <link rel="stylesheet" th:href="@{/css/backend/reset.css}">
+  <link rel="stylesheet" th:href="@{/css/backend/style.css}">
+  <link rel="stylesheet" th:href="@{/css/backend/backstage_user.css}">
+  <link rel="stylesheet" th:href="@{/css/backend/backstage_social.css}">
+  <link rel="stylesheet" th:href="@{/css/backend/backstage_receive_opinion.css}">
+  <link rel="stylesheet" th:href="@{/css/backend/backstage_news.css}">
+  <link rel="stylesheet" th:href="@{/css/backend/backstage_manage_course.css}">
+  <link rel="stylesheet" th:href="@{/css/backend/backstage_manage_course_order.css}">
+  <link rel="stylesheet" th:href="@{/css/backend/backstage-ad.css}">
+  <link rel="stylesheet" th:href="@{/css/backend/backstage_ad_list.css}">
   <link rel="stylesheet" th:href="@{https://cdn.datatables.net/1.13.5/css/dataTables.jqueryui.min.css}" />
