--- a/src/main/resources/templates/back-end/backend_social.html
+++ b/src/main/resources/templates/back-end/backend_social.html
@@ -199,6 +199,7 @@ document.addEventListener('DOMContentLoaded', function() {
         		  alert('成功下架');
         	  }
              
+              // 成功更新状态后再重新加载页面
               location.reload();
           })
           .catch(function(error) {
@@ -240,6 +241,7 @@ document.addEventListener('DOMContentLoaded', function() {
         		  alert('成功下架');
         	  }
              
+              // 成功更新状态后再重新加载页面
               location.reload();
           })
           .catch(function(error) {
