revert "新增 global 的 登入登出判斷"
This reverts commit b7e5d9c9596d7d9894d7b1e696a4390082cab4cf.

--- a/src/main/resources/templates/front-end/header.html
+++ b/src/main/resources/templates/front-end/header.html
@@ -125,24 +125,24 @@
                                         </li>
                                     </ul>
                                     <hr class="mt--10 mb--10">
-                                    <ul class="user-list-wrapper" th:unless="${isLoggedIn}">
-                                        <li id="registerOption" >
+                                    <ul class="user-list-wrapper">
+                                        <li>
                                             <a href="/user/user_register">
                                                 <i class="feather-log-out" name="register-btn"></i>
                                                 <span>註冊</span>
                                             </a>
                                         </li>
                                     </ul>
-                                    <ul class="user-list-wrapper" th:unless="${isLoggedIn}">
-                                        <li id="loginOption">
+                                    <ul class="user-list-wrapper">
+                                        <li>
                                             <a href="/user/user_login">
                                                 <i class="feather-log-out" name="logout-in-btn"></i>
                                                 <span>登入</span>
                                             </a>
                                         </li>
                                     </ul>
-                                    <ul class="user-list-wrapper"  th:if="${isLoggedIn}">
-                                        <li id="logoutOption">
+                                    <ul class="user-list-wrapper">
+                                        <li>
                                             <a href="">
                                                 <i class="feather-log-out" name="logout-post-btn"></i>
                                                 <span>登出</span>
