--- a/src/main/resources/templates/front-end/header_before_login.html
+++ b/src/main/resources/templates/front-end/header_before_login.html
@@ -66,7 +66,7 @@
 
                             <a class="rbt-cart-sidenav-activation rbt-round-btn"  onclick="getCartItems()" href="#">
                                 <i class="feather-shopping-cart"></i>
-<!--                                 <span class="rbt-cart-count"></span> -->
+                                <span class="rbt-cart-count">4</span>
                             </a>
                         </li>
 
