--- a/src/main/resources/templates/front-end/mj/course_details_2.html
+++ b/src/main/resources/templates/front-end/mj/course_details_2.html
@@ -869,6 +869,7 @@
                 // 未登入回到登入頁面
                 alert('請先登入！')
                 window.location.href = '/user/force_user_login';
+//                 commit test
             } else {
                 return res.text();
             }
